external-cloud-service/external-cloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-cloud-service
  labels:
    app: external-cloud-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-cloud-service
  template:
    metadata:
      labels:
        app: external-cloud-service
    spec:
      containers:
      - name: external-cloud-service
        image: neeranuchj/kubernetes-zerotrust:external-cloud-service
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: external-cloud-service
spec:
  selector:
    app: external-cloud-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
